--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "express": "^4.17.1",
-    "mongoose": "^5.10.10",
+    "mongoose": "^5.10.12",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "pug": "^3.0.0"
   }
 }
